--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -33,7 +33,9 @@ p {
     @include border-box;
     padding: 15px;
     max-width: 860px;
-
+    *{
+    	box-sizing:border-box;
+    }
 }
 
 .topics {
@@ -65,8 +67,67 @@ p {
 		@include fs-bodyCopy(2);
 		margin: 0;
 	}
-	
+}
+#winners{
+	margin-top:20px;
+	&:after{
+		clear:both;
+		content:'';
+		display:block;
+	}
+}
+.speech{
+	width:49%;
+	float:left;
+	margin-bottom:40px;
+	margin-right:2%;
+	.winner{
+		border-bottom:2px solid #ddd;
+	}
+	&:nth-of-type(2n+2){
+		margin-right:0;
+	}
+	h2{
+		font-family: $f-sans-serif-text;
+		font-size:12px;
+		color:#ddd;
+		margin:0;
+		line-height:1.1em;
+		font-weight:normal;
+	}
+	h3{
+		font-family: $f-serif-headline;
+		margin:0;
+		font-size:14px;
+		font-weight:bold;
+	}
+}
 
+.speechCategory{
+	width:100%;
+	color:#ccc;
+	padding:4px 5px;
+	font-size:12px;
+	font-family: $f-sans-serif-text;
+	margin-bottom:1px;
+	line-height:1.1em;
+	&.active{
+		background:#ffbb00;
+		color:#333;
+	}
+}
+
+@media (min-width: 480px) {
+	.speech{
+		width:32%;
+		margin-right:2%;
+		&:nth-of-type(2n+2){
+			margin-right:2%;
+		}
+		&:nth-of-type(3n+3){
+			margin-right:0;
+		}
+	}
 }
 
 @media (min-width: 620px) {
@@ -101,7 +162,7 @@ p {
 		display: table;
 
 		.colA {
-			width: 200px;
+			width: 220px;
 			padding-right: 20px;
 		}
 	}
