--- a/src/js/templates/appTemplate.html
+++ b/src/js/templates/appTemplate.html
@@ -8,13 +8,13 @@
     <div class='guContent'>
         <div class='colA'>
 
-               <topics topics="{{topics}}"/>
+               <!-- <topics topics="{{topics}}"/> -->
  
         </div>
         <div class='colB'>
-
-            <speeches />
-            
+        <div id="winners">
+            <speeches on-hoverCategory="highlightCategory"/>
+        </div>  
         </div>
 
     </div>
