--- a/src/js/templates/speechTemplate.html
+++ b/src/js/templates/speechTemplate.html
@@ -1,5 +1,13 @@
-{{#winners}}
-<div class='winner'>
-	here is a winner
+{{#winners:num}}
+<div class="speech">
+	<div class='winner'>
+		<h2>{{award}}</h2>
+		<h3>{{winner}}</h3>
+	</div>
+	<div class="speechCategories">
+		{{#topics}}
+			<div class="speechCategory {{isSelected(winners[num],category)}}"  on-mouseover="hoverCategory">{{label}}</div>
+		{{/topics}}
+	</div>
 </div>
 {{/winners}}
