--- a/src/js/templates/appTemplate.html
+++ b/src/js/templates/appTemplate.html
@@ -1,7 +1,7 @@
 <div class="guInteractive">
 
     <div class='guHeader'>
-        <h1>asdfasdf</h1>
+        <h1>The rules of Oscar speeches</h1>
         <p class='guSubHead'>TK text goes here and here and here and here. Some speeches were   personal,  while others were political and a few you left viewers shocked.</p>
     </div>
 
