--- a/src/js/templates/speechTemplate.html
+++ b/src/js/templates/speechTemplate.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="speechCategories">
 		{{#topics}}
-			<div class="speechCategory {{isSelected(winners[num],category)}}"  on-mouseover="hoverCategory">{{label}}</div>
+			<div class="speechCategory {{isSelected(winners[num],category)}} {{style}}"  on-mouseover="hoverCategory">{{label}}</div>
 		{{/topics}}
 	</div>
 </div>
