--- a/src/js/templates/appTemplate.html
+++ b/src/js/templates/appTemplate.html
@@ -2,7 +2,7 @@
 
     <div class='guHeader'>
         <h1>The rules of Oscar speeches</h1>
-        <p class='guSubHead'>TK text goes here and here and here and here. Some speeches were   personal,  while others were political and a few you left viewers shocked.</p>
+        <p class='guSubHead'>TK text goes here and here and here and here. Some speeches were <span class="styleHighlight" on-mouseover="highlightStyle:personal" on-mouseleave="highlightStyle">personal</span>,  while others were <span class="styleHighlight" on-mouseover="highlightStyle:business" on-mouseleave="highlightStyle">all business</span> and a few you left viewers <span class="styleHighlight" on-mouseenter="highlightStyle:delivery" on-mouseleave="highlightStyle">delivery</span>.</p>
     </div>
 
     <div class='guContent'>
@@ -12,8 +12,8 @@
  
         </div>
         <div class='colB'>
-        <div id="winners">
-            <speeches on-hoverCategory="highlightCategory"/>
+        <div id="winners" class="{{highlight}}">
+            <speeches />
         </div>  
         </div>
 
