--- a/src/js/templates/appTemplate.html
+++ b/src/js/templates/appTemplate.html
@@ -12,8 +12,9 @@
  
         </div>
         <div class='colB'>
-        <div id="winners" class="{{highlight}}">
+        <div id="winners" class="{{highlight}} {{expanded}}">
             <speeches />
+            <button id="reveal" on-click="revealWinners">More actors</button>
         </div>  
         </div>
 
