--- a/src/js/templates/speechTemplate.html
+++ b/src/js/templates/speechTemplate.html
@@ -1,3 +1,4 @@
+
 {{#winners:num}}
 <div class="speech">
 	<div class='winner'>
@@ -5,11 +6,11 @@
 			<h2>{{award}}</h2>
 			<h3>{{winner}}</h3>
 		</div>
-		<div class="winnerPhoto" style="background-image:url(assets/imgs/{{id}}.jpg);"></div>
+		<div class="winnerPhoto" style="background-image:url(@@assetPath@@/imgs/{{id}}.jpg);"></div>
 	</div>
 	<div class="speechCategories">
 		{{#topics}}
-			<div class="speechCategory {{isSelected(winners[num],category)}} winner-{{style}}"  on-mouseover="hoverCategory">{{label}}</div>
+			<div class="speechCategory {{isSelected(winners[num],category)}} winner-{{style}}"  on-mouseover="hoverCategory"><span>{{label}}</span></div>
 		{{/topics}}
 	</div>
 </div>
