--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -86,10 +86,20 @@ p {
 }
 #winners{
 	margin-top:20px;
+	height:320px;
+	overflow:hidden;
+	position: relative;
+
 	&:after{
 		clear:both;
 		content:'';
 		display:block;
+		height:90px;
+		width:100%;
+		position: absolute;
+		bottom:0;
+		background:linear-gradient(rgba(249, 248, 242,0.3),rgba(249, 248, 242,1));
+		z-index:2;
 	}
 	&.business .winner-business,&.delivery .winner-delivery,&.personal .winner-personal{
 		color:#333;
@@ -98,7 +108,33 @@ p {
 			color:#333;
 		}
 	}
-	
+	#reveal{
+		position: absolute;
+		height:40px;
+		width:auto;
+		border-radius:40px;
+		background:#7d7569;
+		bottom:10px;
+		left:50%;
+		transform: translateX(-50%);
+		border:none;
+		z-index:3;
+		cursor:pointer;
+		font-family:'Guardian Text Sans Web',Arial;
+		font-size:14px;
+		font-weight:bold;
+		padding: 0 10px;
+		color:#fff;
+	}
+	&.expanded{
+		height: auto;
+		#reveal{
+			display:none;
+		}
+		&:after{
+			height:0;
+		}
+	}
 }
 .speech{
 	width:48%;
@@ -146,7 +182,7 @@ p {
 	}
 	&:nth-of-type(1){
 		.speechCategory{
-			color:#888;
+			color:#aaa;
 			&.active{
 				color:#333;
 			}
@@ -156,7 +192,9 @@ p {
 
 .speechCategory{
 	width:100%;
-	color:#eee;
+	height:auto;
+	float:left;
+	color:#aaa;
 	padding:4px 5px 4px 25px;
 	font-size:12px;
 	border-bottom:1px solid transparent;
@@ -179,7 +217,8 @@ p {
 		// margin-bottom:15px;
 	}
 	&.active{
-		color:#333;
+		color:#111;
+		font-weight:bold;
 		&:before{
 			background-image:url(../imgs/tick.svg);
 			background-color:#ffbb00;
@@ -190,6 +229,26 @@ p {
 }
 
 @media (min-width: 480px) {
+	.speechCategory{
+		width:100%;
+		margin:0;
+		border-bottom:1px solid transparent;
+		height:auto;
+		color:#eee;
+		
+		span{
+			display:inline;
+		}
+	}
+	#reveal{
+		display:none;
+	}
+	#winners{
+		height:auto;
+		&:after{
+			height:0;
+		}
+	}
 	.speech{
 		width:32%;
 		margin-right:2%;
@@ -202,9 +261,9 @@ p {
 	}
 }
 
-@media (min-width: 620px) {
+@media (min-width: 780px) {
 	.guHeader {
-		padding-left: 120px;
+		padding-left: 150px;
 	}
 
 	.guContent{
@@ -212,7 +271,7 @@ p {
 
 		.colA {
 			display: table-cell;
-			width: 120px;
+			width: 150px;
 			margin-right: 15px;
 		}
 
