--- a/src/js/templates/appTemplate.html
+++ b/src/js/templates/appTemplate.html
@@ -1,8 +1,8 @@
 <div class="guInteractive">
 
     <div class='guHeader'>
-        <h1>The rules of Oscar speeches</h1>
-        <p class='guSubHead'>TK text goes here and here and here and here. Some speeches were <span class="styleHighlight" on-mouseover="highlightStyle:personal" on-mouseleave="highlightStyle">personal</span>,  while others were <span class="styleHighlight" on-mouseover="highlightStyle:business" on-mouseleave="highlightStyle">all business</span> and a few you left viewers <span class="styleHighlight" on-mouseenter="highlightStyle:delivery" on-mouseleave="highlightStyle">delivery</span>.</p>
+        <h1>How to say thank you</h1>
+        <p class='guSubHead'>As the 2015 Oscars, some speeches <span class="styleHighlight" on-mouseover="highlightStyle:personal" on-mouseleave="highlightStyle">personal</span> others <span class="styleHighlight" on-mouseover="highlightStyle:business" on-mouseleave="highlightStyle">political</span> and a few were just <span class="styleHighlight" on-mouseenter="highlightStyle:delivery" on-mouseleave="highlightStyle">baffling</span>.</p>
     </div>
 
     <div class='guContent'>
@@ -22,3 +22,8 @@
 
 
 </div>
+
+
+
+
+
