--- a/src/js/templates/appTemplate.html
+++ b/src/js/templates/appTemplate.html
@@ -2,7 +2,7 @@
 
     <div class='guHeader'>
         <h1>How to say thank you</h1>
-        <p class='guSubHead'>As the 2015 Oscars, some speeches <span class="styleHighlight" on-mouseover="highlightStyle:personal" on-mouseleave="highlightStyle">personal</span> others <span class="styleHighlight" on-mouseover="highlightStyle:business" on-mouseleave="highlightStyle">political</span> and a few were just <span class="styleHighlight" on-mouseenter="highlightStyle:delivery" on-mouseleave="highlightStyle">baffling</span>.</p>
+        <p class='guSubHead'>As the 2015 Oscars, some speeches <span class="styleHighlight" on-mouseover="highlightStyle:personal" on-mouseleave="highlightStyle">personal</span> others <span class="styleHighlight" on-mouseover="highlightStyle:business" on-mouseleave="highlightStyle">professional</span> and a few were just <span class="styleHighlight" on-mouseenter="highlightStyle:delivery" on-mouseleave="highlightStyle">baffling</span>.</p>
     </div>
 
     <div class='guContent'>
@@ -14,7 +14,7 @@
         <div class='colB'>
         <div id="winners" class="{{highlight}} {{expanded}}">
             <speeches />
-            <button id="reveal" on-click="revealWinners">More actors</button>
+            <button id="reveal" on-click="revealWinners">More winners</button>
         </div>  
         </div>
 
